--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
                                     <th class="text-center">Posts</th>
                                     <th class="text-center">Reaction</th>
                                     <th class="text-center">Comment</th>
+                                    <th class="text-center">Share</th>
                                     <th class="text-center">Spam</th>
                                     <th class="text-center">Points</th>
 
@@ -102,6 +103,7 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
                                     <td class="text-center">{{rank.post}}</td>
                                     <td class="text-center">{{rank.reaction}}</td>
                                     <td class="text-center">{{rank.comment}}</td>
+                                    <td class="text-center">{{rank.share}}</td>
                                     <td class="text-center">{{rank.spam}}</td>
                                     <td class="text-center">{{rank.points}}</td>
                                 </tr>
@@ -131,8 +133,8 @@ var points = [
 '100', 
 '50', 
 '30', 
-'30', 
-'50'];
+'150', 
+'1'];
 
 rank('551867098345879', 'EAAAAAYsX7TsBAMumbM7BUZB7mcZCo24XlZA7dTXImPZBNiDZB2sexZAj9qKf2HPBdxZALw8jZCBYsn8zbSjQWUacpyqRMzrp0XC0guyRyd7A9sVw5wbpRR9sEX5yCydEgpFfNenm99zjFkFqpB700X1kZBQJLdZAjEF5KQ7bCchU8laWS6or4ZBAceMOXxoKxAVn4JmE3GogS120QYFQ5noBNMZA', 'thuthuatjb', 30, points);</script>
 </body>
