--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
 <script src="app.js"></script>
 <script>
 var points = [
-'100', 
-'50', 
-'30', 
-'150', 
-'1'];
+/*đăng bài*/'100', 
+/*thả rect*/'50', 
+/*bình luận*/'30', 
+'30',
+/*chia sẻ*/'150', 
+/*spam*/'1'];
 
 rank('551867098345879', 'EAAAAAYsX7TsBAMumbM7BUZB7mcZCo24XlZA7dTXImPZBNiDZB2sexZAj9qKf2HPBdxZALw8jZCBYsn8zbSjQWUacpyqRMzrp0XC0guyRyd7A9sVw5wbpRR9sEX5yCydEgpFfNenm99zjFkFqpB700X1kZBQJLdZAjEF5KQ7bCchU8laWS6or4ZBAceMOXxoKxAVn4JmE3GogS120QYFQ5noBNMZA', 'thuthuatjb', 30, points);</script>
 </body>
