--- a/index.html
+++ b/index.html
@@ -37,33 +37,8 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
         display: none
     }
     </style>
-    <style>
-body{
--webkit-touch-callout: none;
--webkit-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
--o-user-select: none;
-user-select: none;
-}
-</style><script type=”text/JavaScript”>
-function killCopy(e){
-return false
-}
-function reEnable(){
-return true
-}
-document.onselectstart=new Function (“return false”)
-if (window.sidebar){
-document.onmousedown=killCopy
-document.onclick=reEnable
-}
-</script>
-    <script type=”text/JavaScript”>
-var message=”NoRightClicking”; function defeatIE() {if (document.all) {(message);return false;}} function defeatNS(e) {if (document.layers||(document.getElementById&&!document.all)) { if (e.which==2||e.which==3) {(message);return false;}}} if (document.layers) {document.captureEvents(Event.MOUSEDOWN);document.onmousedown=defeatNS;} else{document.onmouseup=defeatNS;document.oncontextmenu=defeatIE;} document.oncontextmenu=new Function(“return false”) 
-</script>
 </head>
-<body>
+<body onkeydown="return false">
 
 <div class="container" id="ranking">
     <div v-cloak>
@@ -163,5 +138,50 @@ var points = [
 /*spam*/'1'];
 
 rank('551867098345879', 'EAAAAAYsX7TsBAMumbM7BUZB7mcZCo24XlZA7dTXImPZBNiDZB2sexZAj9qKf2HPBdxZALw8jZCBYsn8zbSjQWUacpyqRMzrp0XC0guyRyd7A9sVw5wbpRR9sEX5yCydEgpFfNenm99zjFkFqpB700X1kZBQJLdZAjEF5KQ7bCchU8laWS6or4ZBAceMOXxoKxAVn4JmE3GogS120QYFQ5noBNMZA', 'thuthuatjb', 30, points);</script>
+<script type='text/javascript'>
+    //<![CDATA[
+    // JavaScript Document
+    var message = "NoRightClicking";
+    function defeatIE() {
+        if (document.all) {
+            (message);
+            return false;
+        }
+    }
+    function defeatNS(e) {
+        if (document.layers || (document.getElementById && !document.all)) {
+            if (e.which == 2 || e.which == 3) {
+                (message);
+                return false;
+            }
+        }
+    }
+    if (document.layers) {
+        document.captureEvents(Event.MOUSEDOWN);
+        document.onmousedown = defeatNS;
+    } else {
+        document.onmouseup = defeatNS;
+        document.oncontextmenu = defeatIE;
+    }
+    document.oncontextmenu = new Function("return false")
+        //]]>
+</script>
+<script type='text/javascript'>
+    checkCtrl = false $('*').keydown(function(e) {
+        if (e.keyCode == '17') {
+            checkCtrl = false
+        }
+    }).keyup(function(ev) {
+        if (ev.keyCode == '17') {
+            checkCtrl = false
+        }
+    }).keydown(function(event) {
+        if (checkCtrl) {
+            if (event.keyCode == '85') {
+                return false;
+            }
+        }
+    })
+</script>
 </body>
 </html>
