--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ var message=”NoRightClicking”; function defeatIE() {if (document.all) {(mess
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=800, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <link rel="Stylesheet" href="main.css" type="text/css">
     <title>Group Ranking</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css" rel="stylesheet"/>
