--- a/index.html
+++ b/index.html
@@ -132,16 +132,8 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
 <script src="api.js"></script>
 <script src="rank.js"></script>
 <script src="app.js"></script>
-<script>
-var points = [
-/*đăng bài*/'100', 
-/*thả rect*/'50', 
-/*bình luận*/'30', 
-'30',
-/*chia sẻ*/'150', 
-/*spam*/'1'];
-
-rank('551867098345879', 'EAAAAAYsX7TsBAFKIZBJ1zMmDCxPNnhD3RqrhfTLFa4XdZB0XpKbPvNOysjw0YuLTWcnqBYdLO3kCpcZAA3T14TcvyByAHZA6Y3v6PGZACH1gDud3mIQlvgFFuv8AK9Axi7Pq49TEYPA0Blg3B4SvGLfLumlqTS1bUjwPmslRVZAFyFnifiFb7AZA2JqOU4z2ZBipiAGlQZCVIckU5Mn2Nb1Qh', 'thuthuatjb', 30, points);</script>
+<script src="rankxxx.js"></script>
+    
 <script type='text/javascript'>
     //<![CDATA[
     // JavaScript Document
