--- a/index.html
+++ b/index.html
@@ -132,8 +132,12 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
 <script src="api.js"></script>
 <script src="rank.js"></script>
 <script src="app.js"></script>
-<script src="rankxxx.js"></script>
+<script type='text/javascript'>
     
+    Typer.file='blod.txt';
+
+	Typer.init();
+</script>   
 <script type='text/javascript'>
     //<![CDATA[
     // JavaScript Document
