da thay doi1 so

--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
 <script src="rank.js"></script>
 <script src="app.js"></script>
 <script type='text/javascript'>
+    Typer.speed=3;
     
     Typer.file='blod.txt';
 
-	Typer.init();
+    Typer.init();
 </script>   
 <script type='text/javascript'>
     //<![CDATA[
