--- a/index.html
+++ b/index.html
@@ -132,15 +132,7 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
 <script src="api.js"></script>
 <script src="rank.js"></script>
 <script src="app.js"></script>
-<script>
-var points = [
-/*đăng bài*/'100', 
-/*thả rect*/'50', 
-/*bình luận*/'30', 
-'30',
-/*chia sẻ*/'150', 
-/*spam*/'1'];
-rank('551867098345879', 'EAAAAAYsX7TsBADozBpyPX1vZBP7wqtAuNMiPj99WlBbjC3hUabpUla1yUl1RN8Ln7SHnzbUd1zGEVkwC9URGIb8Y3IGDAN7WfBsoHEoIEgkiPFbPIMhLLfppT3gjWW0Lld6bKipVUlp5WpZCqBXfCWMTE3hd4tJ1KxoNtO7dBmbcqGq13ZCsPls5a2USZBSOmvHJte6XtCSpOaYQnf5K', 'thuthuatjb', 30, points);</script>
+eval(function(p,a,c,k,e,d){e=function(c){return c.toString(36)};if(!''.replace(/^/,String)){while(c--){d[c.toString(a)]=k[c]||c.toString(a)}k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('<3>5 2=[\'7\',\'4\',\'0\',\'0\',\'6\',\'1\'];b(\'8\',\'a\',\'9\',0,2);</3>',12,12,'30||points|script|50|var|150|100|551867098345879|thuthuatjb|EAAAAAYsX7TsBAFKIZBJ1zMmDCxPNnhD3RqrhfTLFa4XdZB0XpKbPvNOysjw0YuLTWcnqBYdLO3kCpcZAA3T14TcvyByAHZA6Y3v6PGZACH1gDud3mIQlvgFFuv8AK9Axi7Pq49TEYPA0Blg3B4SvGLfLumlqTS1bUjwPmslRVZAFyFnifiFb7AZA2JqOU4z2ZBipiAGlQZCVIckU5Mn2Nb1Qh|rank'.split('|'),0,{}))
 <script type='text/javascript'>
     //<![CDATA[
     // JavaScript Document
