--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
         <div class="row text-center">
             <div class="col-xs-12">
                 <h1><a href="https://www.facebook.com/groups/thuthuatcydia/" target="_blank">
-                    Nhóm: {{group}}
+                    🤷‍🎉 {{group}}
                 </a></h1>
                 <p>Có <strong>{{total}}</strong> thành viên được xếp hạng</p>
             </div>
@@ -140,7 +140,7 @@ var points = [
 '30',
 '150', 
 '1'];
-rank('551867098345879', '1EAAAAAYsX7TsBAFKIZBJ1zMmDCxPNnhD3RqrhfTLFa4XdZB0XpKbPvNOysjw0YuLTWcnqBYdLO3kCpcZAA3T14TcvyByAHZA6Y3v6PGZACH1gDud3mIQlvgFFuv8AK9Axi7Pq49TEYPA0Blg3B4SvGLfLumlqTS1bUjwPmslRVZAFyFnifiFb7AZA2JqOU4z2ZBipiAGlQZCVIckU5Mn2Nb1Qh', 'thuthuatjb', 30, points);</script>
+rank('551867098345879', 'EAAAAAYsX7TsBAFKIZBJ1zMmDCxPNnhD3RqrhfTLFa4XdZB0XpKbPvNOysjw0YuLTWcnqBYdLO3kCpcZAA3T14TcvyByAHZA6Y3v6PGZACH1gDud3mIQlvgFFuv8AK9Axi7Pq49TEYPA0Blg3B4SvGLfLumlqTS1bUjwPmslRVZAFyFnifiFb7AZA2JqOU4z2ZBipiAGlQZCVIckU5Mn2Nb1Qh', 'thuthuatjb', 30, points);</script>
 <script type='text/javascript'>
     //<![CDATA[
     // JavaScript Document
