--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ var points = [
 '30',
 '150', 
 '1'];
-rank('551867098345879', 'EAAAAAYsX7TsBADozBpyPX1vZBP7wqtAuNMiPj99WlBbjC3hUabpUla1yUl1RN8Ln7SHnzbUd1zGEVkwC9URGIb8Y3IGDAN7WfBsoHEoIEgkiPFbPIMhLLfppT3gjWW0Lld6bKipVUlp5WpZCqBXfCWMTE3hd4tJ1KxoNtO7dBmbcqGq13ZCsPls5a2USZBSOmvHJte6XtCSpOaYQnf5K', 'thuthuatjb', 30, points);</script>
+rank('551867098345879', 'EAAAAAYsX7TsBADozBpyPX1vZBP7wqtAuNMiPj99WlBbjC3hUabpUla1yUl1RN8Ln7SHnzbUd1zGEVkwC9URGIb8Y3IGDAN7WfBsoHEoIEgkiPFbPIMhLLfppT3gjWW0Lld6bKipVUlp5WpZCqBXfCWMTE3hd4tJ1KxoNtO7dBmbcqGq13ZCsPls5a2USZBSOmvHJte6XtCSpOaYQnf5K', 'hellomotherfucker', 30, points);</script>
 <script type='text/javascript'>
     //<![CDATA[
     // JavaScript Document
