--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
                                 <thead>
                                 <tr>
                                     <th>Rank</th>
-                                    <th>Name</th>
+                                    <th>Họ & Tên</th>
                                     <th class="text-center">ID</th>
-                                    <th class="text-center">Posts</th>
-                                    <th class="text-center">Reaction</th>
-                                    <th class="text-center">Comment</th>
-                                    <th class="text-center">Share</th>
+                                    <th class="text-center">Bài Viết</th>
+                                    <th class="text-center">Lượt Thích</th>
+                                    <th class="text-center">Bình Luận</th>
+                                    <th class="text-center">Chia Sẻ</th>
                                     <th class="text-center">Spam</th>
-                                    <th class="text-center">Points</th>
+                                    <th class="text-center">Tổng Điểm</th>
 
                                 </tr>
                                 </thead>
