--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 n=new Date();if(n.getTimezoneOffset()==0)t=n.getTime()+(7*60*60*1000);else t=n.getTime();n.setTime(t);var dn=new Array("Chủ nhật","Thứ 2","Thứ 3","Thứ 4","Thứ 5","Thứ 6","Thứ 7");d=n.getDay();m=n.getMonth()+1;y=n.getFullYear()
 document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+m+"/"+y)
 </script></center>
+    <center>p>Đang Online</p>
+<script id="_waut02">var _wau = _wau || []; _wau.push(["dynamic", "llqvqjipvu", "t02", "cc4125000000", "big"]);</script><script async src="//waust.at/d.js"></script></center>
 <style>
 #h {font-weight:400;
     display: block;
@@ -51,8 +53,6 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
                 <p>Có <strong>{{total}}</strong> thành viên được xếp hạng</p>
             </div>
         </div>
-        <p>Đang Online</p>
-<script id="_waut02">var _wau = _wau || []; _wau.push(["dynamic", "llqvqjipvu", "t02", "cc4125000000", "big"]);</script><script async src="//waust.at/d.js"></script>
         <div class="row">
             <div class="col-xs-12">
                 <div class="panel panel-primary">
