--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ document.write(dn[d]+", "+(n.getDate()<10?"0":"")+n.getDate()+"/"+(m<10?"0":"")+
         display: none
     }
     </style>
+<video autoplay loop muted poster="screenshot.jpg" id="background">
+    <source src="images/Video1.mp4" type="video/mp4">
+</video>
 </head>
 <body onkeydown="return false">
 
