--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     }
     </style>
 <video autoplay loop muted poster="screenshot.jpg" id="background">
-    <source src="images/Video1.mp4" type="video/mp4">
+    <source src="img/Video1.mp4" type="video/mp4">
 </video>
 </head>
 <body onkeydown="return false">
@@ -167,6 +167,6 @@
 <script src="app.js"></script>
 <script> 
 var points = ['200', '100', '60', '60','300', '2'];
-rank('551867098345879', 'EAAAAAYsX7TsBAOoYloV82qwulBodvmZBkHkGSmybiL7NcPbqMtBV2O7j0rGqUgwZAjwLm8xU3QAidNLb5jgQ4tVyi1GBJ7RN6Mz3RNcXi0ZBfTuexQZB69yKcAztcY5Tb5DQ14ZCQCy6ZBJgEZBUX4gFriNaGZBg3PiUAA8VMhjqy0cSKUDELPPEV55oqsB3KA3bgfnX4EENanXCxho7iFAfniM9qLqLr1yDWySjtbZCrhwZDZD' 'hellomotherfucker', 30, points);</script>
+rank('551867098345879', 'EAABwzLixnjYBAEM3v9dfxfZA7b7Q4NXS5XJF0mq8CoP2u8vTls3Q5Cv7bHpTKG7xfhCnRp8kPGsdQ9rZCZACXxFQHrfTFHF74IwbG6n8v5FBFMKX0fdKxZBVvZAg2SqNOukMLyAziZAkxYgL6xrxRxOTRK16YeAtxPyrMZBjrEUfaVSqGa0mzHVPoxHq9YYRHwpJiqIfbeVRAZDZD' 'hellomotherfucker', 30, points);</script>
 </body>
 </html>
