--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     }
     </style>
 <video autoplay loop muted poster="screenshot.jpg" id="background">
-    <source src="img/Video1.mp4" type="video/mp4">
+    <source src="images/Video1.mp4" type="video/mp4">
 </video>
 </head>
 <body onkeydown="return false">
